added basic auth with email and password,forgot and reset password
