# cmd/api/middleware.go
@@ -1,0 +1,12 @@
+package main
+
+import "net/http"
+
+func (app *application) AuthTokenMiddleware(next http.Handler) http.Handler {
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		authHeader := r.Header.Get("Authorization")
+		if authHeader == "" {
+
+		}
+	})
+}
